更新地址解析